--- a/styles/base.css
+++ b/styles/base.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    font-family: "Schibsted Grotesk", sans-serif;
+  font-family: 'Schibsted Grotesk', sans-serif;
 }
 
 header {
@@ -70,14 +70,45 @@ main h1 {
   color: #1d4d72;
 }
 
-main .card {
+main .hero-img {
+  position: relative;
+  grid-column: 1/3;
+}
+
+main .hero-img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+main .hero-img .herolabel {
+  position: absolute;
+  top: 30px;
+  left: 30px;
+  background: radial-gradient(#fff, #4d5b97);
+  border: 1px solid rgba(0, 0, 0, 0.75);
+  padding: 1.5rem;
+  box-shadow: 0 0 3rem #fff;
+  opacity: 0.75;
+}
+
+main .hero-img .herolabel p {
+  margin: 0;
+	padding: .25rem;
+	font-weight: 700;
+	font-size: 1.5rem;
+	font-family:"Great Vibes", serif;
+}
+
+main .card-01, main .card-02 {
   border: 1px solid #1d4d72;
   border-radius: 0.5rem;
   grid-column: 1/3;
   margin-bottom: 1rem;
+  box-shadow: 0px 3px 22px 0px rgba(0,0,0,0.75);
 }
 
-main .card div {
+main .card-01 div, main .card-02 div{
   background-color: #1d4d72;
   text-align: center;
   padding: 1rem;
@@ -85,15 +116,20 @@ main .card div {
   border-radius: 0.5rem 0.5rem 0 0;
 }
 
-main .card ul {
+main .card-01 ul {
   padding: 1rem;
   list-style: none;
 }
 
-main .card span {
+main .card-02 span {
   text-align: center;
   display: block;
   margin: 1rem;
+}
+
+iframe {
+  width: 100%;
+  grid-column: 1/3;
 }
 
 footer {
