--- a/styles/larger.css
+++ b/styles/larger.css
@@ -16,7 +16,7 @@
 
     main {
         grid-template-columns: 1fr 1fr 1fr;
-        grid-template-rows: 1fr 3fr;
+        grid-template-rows: 1fr auto 1fr 1fr;
         gap: 1rem;
     }
 
@@ -24,12 +24,20 @@
         text-align: left;
     }
 
-    main .card:first-child {
-        grid-column: 1/3;
+    main .hero-img {
+       grid-column: 1/4;
+      }
+
+    main .card-01 {
+        grid-column: 1/3; 
     }
 
-    main .card:last-child {
-        grid-column: 3/4;
+    main .card-02 {
+        grid-column: 3/4; 
+    }
+
+    iframe {
+        grid-column: 1/4;
     }
 
     footer p:first-child {
