--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -12,6 +12,7 @@
   }
 
   nav ul {
+    padding: 0;
     display: flex;
     justify-content: space-between;
     gap: 4rem;
@@ -39,5 +40,14 @@
     flex-direction: row;
     justify-content: space-between;
     gap: 4rem;
-}
+  }
+
+  .grid-container {
+    grid-template-columns: 1fr 3fr; /* 1:3 ratio for sidebar and main content */
+  }
+
+  .grid-container picture img:hover {
+    transition: all ease 1s;
+    filter: brightness(0.5);
+  }
 }
