--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -6,22 +6,59 @@
   --color-4: #dafffb;
 
   --heading: 'Ubuntu', sans-serif;
+
+  --font-size-largest: 5em;
+  --font-size-larger: 2.618em;
+  --font-size-large: 1.618em;
+  --font-size: 1em; /* 16px */
+  --font-size-small: 0.85em;
+  --font-size-smaller: 0.382em;
+  --font-size-smallest: 0.236em;
 }
 
-body {
-  font-family: 'Lato', sans-serif;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 a {
   text-decoration: none;
-  color: black;
+  color: var(--color-blue);
+  font-weight: 700;
+  transition: color 0.8s;
 }
 
-ul {
+a:hover {
+  color: var(--color-3);
+}
+
+ul,
+ol {
   list-style: none;
 }
 
-.top-header div {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: var(--heading);
+}
+
+body,
+a,
+p {
+  font-family: 'Lato', sans-serif;
+}
+
+img {
+  object-fit: cover;
+  object-position: center center;
+}
+
+.top-header > div:first-child {
   display: flex;
   gap: 3rem;
 }
@@ -38,9 +75,14 @@ ul {
 .bottom-header {
   display: none; /* Inicialmente oculto */
   position: absolute;
-  width: 100vw;
+  right: 0;
   opacity: 0.8;
   z-index: 100;
+  background-color: var(--primary-color);
+}
+
+.bottom-header ul li {
+  margin: 24px 0;
 }
 
 .bottom-header ul li a {
@@ -55,28 +97,65 @@ ul {
   text-decoration: underline;
 }
 
-.hero-image {
+.bottom-header a img {
+  display: none;
+}
+
+.cta-card_container {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  position: relative;
+  height: fit-content;
   width: 100%;
-  height: 50vh;
-  background-image: url('../images/Santateresahannes.jpg');
-  background-repeat: no-repeat;
-  background-position: center center;
-  object-fit: cover;
-  position: relative;
+  z-index: 10;
+  margin: 0 auto;
+  gap: 16px;
 }
 
-.options-sec {
-  position: relative;
-  margin-top: -30px;
-  z-index: 1;
+.cta-card {
+  background-color: var(--primary-color);
+  padding: 1rem;
+  width: 80%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  cursor: pointer;
 }
 
-.options-sec p {
+.cta-card:nth-child(2) {
+  background-color: var(--color-3);
+}
+
+.cta-card:last-child {
+  background-color: var(--color-4);
+}
+
+.cta-card:hover {
+  transition: all 0.5s;
+  background-color: black;
+}
+
+.cta-card:hover span {
+  transition: all 0.5s;
+  font-size: 3.5rem;
+}
+
+.cta-card span {
+  color: white;
   text-align: center;
+  width: 100%;
+  font-size: 3rem;
+  margin-bottom: 1rem;
 }
 
-.options-sec_cards-container {
-  gap: 0.5rem;
+.cta-card h4 {
+  border-top: 2px solid white;
+  border-bottom: 2px solid white;
+  color: white;
+  text-align: center;
+  font-size: 2rem;
 }
 
 .event-sec {
@@ -105,7 +184,18 @@ ul {
 .sponsors-sec div {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   gap: 4rem;
+  padding: 2rem 0;
+}
+
+.sponsor-card {
+  width: 100%;
+}
+
+.sponsor-card img {
+  width: 100%;
+  object-fit: cover;
 }
 
 footer {
@@ -114,6 +204,20 @@ footer {
 }
 
 /* classes */
+
+.box-shadow {
+  -webkit-box-shadow: 2px 4px 16px 0px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 2px 4px 16px 0px rgba(0, 0, 0, 0.75);
+  box-shadow: 2px 4px 16px 0px rgba(0, 0, 0, 0.75);
+}
+
+.h-screen-80 {
+  height: 80vh;
+}
+
+.w-full {
+  width: 100%;
+}
 
 .icon {
   display: none;
@@ -165,8 +269,13 @@ footer {
 .btn-primary {
   background-color: #04364a;
   color: white;
-  padding: 0.5rem;
+  padding: 1rem;
   border-radius: 5px;
+}
+
+.btn-primary:hover {
+  transition: all ease 0.5s;
+  background-color: var(--color-3);
 }
 
 .grid-container {
@@ -232,6 +341,7 @@ form {
   background-color: var(--secondary-color);
   border-radius: 5px;
   color: white;
+  height: fit-content;
 }
 
 fieldset {
@@ -281,14 +391,59 @@ input[type='submit']:hover {
 }
 
 aside {
-  width: 100%;
-  max-width: 600px;
-  padding: 20px;
-  background-color: var(--aside-bg-color);
-  border-radius: 5px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  padding: 2rem;
+  box-shadow: 0 5px 20px rgba(0, 0, 0, 0.1);
+  width: 300px;
 }
 
 aside h2 {
   margin-top: 0;
+}
+
+/* card component */
+.card {
+  display: inline-block;
+  padding: 40px 50px;
+}
+
+/* card component blocks */
+
+.card__title {
+  font-weight: 300;
+  font-size: var(--font-size-large);
+}
+
+.card__price {
+  font-weight: 500;
+  font-size: var(--font-size-largest);
+  position: relative;
+  letter-spacing: -0.02em;
+}
+
+.card__price:before {
+  content: '$';
+  position: absolute;
+  font-size: var(--font-size-smallest);
+  font-weight: 400;
+  left: -15px;
+  top: 10px;
+}
+
+.card__sub-title {
+  text-transform: lowercase;
+  font-size: var(--font-size-small);
+}
+
+.card__list {
+  list-style-type: none;
+  padding: 0;
+}
+
+.card__list__item {
+  margin: 15px 0;
+}
+
+/* pricing plan card  */
+.card--plan {
+  width: 200px;
 }
