--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -1,14 +1,14 @@
 @media (min-width: 945px) {
-  #main-nav {
+  .bottom-header {
     display: flex;
-    width: 100vw;
-    opacity: 1;
     position: relative;
     justify-content: space-between;
+    align-items: center;
+    background-color: white;
   }
 
-  nav {
-    width: 100%;
+  .bottom-header a img {
+    display: inline-block;
   }
 
   nav ul {
@@ -16,6 +16,10 @@
     display: flex;
     justify-content: space-between;
     gap: 4rem;
+  }
+
+  .bottom-header ul li a {
+    color: var(--primary-color);
   }
 
   .icon {
@@ -49,5 +53,21 @@
   .grid-container picture img:hover {
     transition: all ease 1s;
     filter: brightness(0.5);
+  }
+
+  .sponsors-sec div {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 4rem;
+    padding: 2rem 0;
+  }
+  
+  .sponsor-card {
+    width: 25%;
+  }
+  
+  .sponsor-card img {
+    width: 100%;
+    object-fit: cover;
   }
 }
