--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -55,6 +55,19 @@
     filter: brightness(0.5);
   }
 
+  .cta-card_container {
+    display: flex;
+    flex-direction: row;
+    height: 200px;
+    width: 60%;
+    margin-top: -100px;
+  }
+  
+  .cta-card {
+    width: 33.33%;
+    height: 100%;
+  }
+
   .sponsors-sec div {
     display: flex;
     flex-wrap: wrap;
