--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -101,6 +101,34 @@ img {
   display: none;
 }
 
+.hero {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 100;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.main-cta-container {
+  z-index: 1000;
+  text-align: center;
+  position: relative;
+}
+
+.main-cta-container .overlay {
+  position: absolute; /* Sit on top of the page content */
+  width: 100%; /* Full width (cover the whole page) */
+  height: 100%; /* Full height (cover the whole page) */
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5); /* Black background with opacity */
+  z-index: 1; /* Specify a stack order in case you're using a different order for other elements */
+}
+
 .cta-card_container {
   display: flex;
   align-items: center;
@@ -125,11 +153,11 @@ img {
 }
 
 .cta-card:nth-child(2) {
-  background-color: var(--color-3);
+  background-color: var(--primary-color);
 }
 
 .cta-card:last-child {
-  background-color: var(--secondary-color);
+  background-color: var(--primary-color);
 }
 
 .cta-card:hover {
@@ -172,13 +200,12 @@ img {
 .event-card {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  text-align: center;
   background-color: var(--primary-color);
 }
 
-.event-card picture img {
-  height: 100%;
+.event-card div img {
+  object-fit: cover;
+  width: 100%;
 }
 
 .sponsors-sec div {
@@ -446,4 +473,65 @@ aside h2 {
 /* pricing plan card  */
 .card--plan {
   width: 200px;
+}
+
+/* Styles for grid view */
+.grid-view {
+  display: grid;
+  grid-template-columns: 1fr;
+  /* Default to single column */
+  grid-gap: 10px;
+}
+
+.grid-view section {
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  padding: 0.5rem;
+  background-color: var(--accent2-color);
+  text-align: center;
+  box-shadow: 2px 2px 4px #333;
+}
+
+.grid-view img {
+  max-width: 100%;
+  height: auto;
+}
+
+.grid-view h3 {
+  font-family: "Oleo Script", sans-serif;
+}
+
+/* Styles for list view */
+.list-view {
+  display: flex;
+  flex-direction: column;
+}
+
+.list-view section {
+  display: block;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  padding: 0.5rem;
+  background-color: #fff;
+  margin-left: 2vw;
+  margin-right: 2vw;
+}
+
+.list-view section h3,
+.list-view section p,
+.list-view section a {
+  margin: 0.5rem 2vw;
+}
+
+.list-view section:nth-child(even) {
+  background-color: var(--accent2-color);
+}
+
+h2#directory {
+  text-align: center;
+  margin-top: 1rem;
+}
+
+.grid-view section a {
+  word-break: break-all;
+  display: block;
+  overflow-wrap: anywhere;
 }
