added new changes

--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -101,9 +101,9 @@
 
   .sponsor-card img {
     width: 100%;
-    object-fit: cover;
+    aspect-ratio: 1/1;
   }
-  
+
   .grid-view {
     padding: 1rem;
     grid-template-columns: 1fr 1fr 1fr;
@@ -113,4 +113,16 @@
     gap: 1rem;
     padding: 1rem;
   }
+
+  .weather-sec > div {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  .weather-sec div .today-weather {
+    max-width: none;
+    margin: 0 0;
+  }
+  
 }
