--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -53,11 +53,6 @@ p {
   font-family: 'Lato', sans-serif;
 }
 
-img {
-  object-fit: cover;
-  object-position: center center;
-}
-
 .top-header > div:first-child {
   display: flex;
   gap: 3rem;
@@ -101,7 +96,11 @@ img {
   display: none;
 }
 
-.hero {
+.swiper-slide img {
+  object-fit: contain;
+}
+
+.overlay {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -109,6 +108,13 @@ img {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
+}
+
+.overlay h1 {
+  background-color: var(--primary-color);
+  padding: 1rem;
+  color: #fff;
 }
 
 .main-cta-container {
@@ -217,12 +223,58 @@ img {
 }
 
 .sponsor-card {
-  width: 100%;
+  width: 50vw;
+  margin: 0 auto;
 }
 
 .sponsor-card img {
   width: 100%;
-  object-fit: cover;
+  object-fit: contain;
+}
+
+.weather-sec {
+  background-color: #f0f0f0;
+}
+
+.weather-sec > div {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  padding-top: 2rem;
+}
+
+.weather-sec div .today-weather {
+  max-width: 300px;
+  margin: 0 auto;
+  background-color: #ffffff;
+  padding: 1rem 2rem;
+  border-radius: 5%;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+
+.weather-sec div .forecast {
+  background-color: #ffffff;
+  padding: 1rem 2rem;
+  border-radius: 5%;
+  display: flex;
+  flex-direction: column;
+  text-align: start;
+}
+
+.weather-sec div .forecast .forecast-container {
+  padding: 1rem 0;
+  display: flex;
+  flex-direction: row;
+  gap: 2rem;
+  justify-content: space-between;
+}
+
+.weather-sec div .forecast .forecast-container .forecast-item {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
 }
 
 footer {
@@ -298,6 +350,15 @@ footer {
   color: white;
   padding: 1rem;
   border-radius: 5px;
+}
+
+.btn-secondary {
+  background-color: var(--color-3);
+  color: var(--primary-color);
+  font-weight: 800;
+  padding: 1rem;
+  border-radius: 5px;
+  cursor: pointer;
 }
 
 .btn-primary:hover {
@@ -497,7 +558,7 @@ aside h2 {
 }
 
 .grid-view h3 {
-  font-family: "Oleo Script", sans-serif;
+  font-family: 'Oleo Script', sans-serif;
 }
 
 /* Styles for list view */
