--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -596,3 +596,21 @@ h2#directory {
   display: block;
   overflow-wrap: anywhere;
 }
+
+/* Banner styling */
+.banner {
+  background-color: #ffeb3b;
+  width: 100vw;
+  color: #000;
+  padding: 1em;
+  text-align: center;
+  position: absolute;
+  display: none; /* Initially hidden */
+}
+.banner .close-btn {
+  position: absolute;
+  top: 0.5em;
+  right: 1em;
+  cursor: pointer;
+  font-size: 1.5em;
+}
